contact site: put images into div container to fix distortion with smaller screens

--- a/sass/contactStyle.scss
+++ b/sass/contactStyle.scss
@@ -29,6 +29,7 @@ body {
 
         h3 {
           font-size: $font-size-header;
+          margin-bottom: -0.2em;
         }
 
         p {
